--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "tot_ply = df['SN'].nunique()\n",
     "tot_plys_df = pd.DataFrame({'Total Players' : [tot_ply]})\n",
-    "tot_plys_df\n"
+    "tot_plys_df"
    ]
   },
   {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -274,23 +274,27 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#grab values from the data frame\n",
     "uni_itm = df['Item Name'].nunique()\n",
     "avg_pri = df['Price'].mean()\n",
     "num_pur = df['Price'].count()\n",
     "tot_rev = df['Price'].sum()\n",
     "\n",
+    "#create a summary data frame\n",
     "pur_ana = {'Number of Unique Items': [uni_itm], 'Average Price' : [avg_pri], 'Number of Purchases' : [num_pur], 'Total Revenue' : [tot_rev]}\n",
     "pur_ana_df = pd.DataFrame(data=pur_ana)\n",
     "\n",
+    "#format values\n",
     "pur_ana_df['Average Price'] = pur_ana_df['Average Price'].map(\"${:,.2f}\".format)\n",
     "pur_ana_df['Total Revenue'] = pur_ana_df['Total Revenue'].map(\"${:,.2f}\".format)\n",
     "\n",
+    "#display data frame\n",
     "pur_ana_df"
    ]
   },
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -373,21 +377,26 @@
        "Other / Non-Disclosed            11                 1.91%"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#create a data frame with no duplicate values in column SN\n",
     "df_gen_clean = df.drop_duplicates(subset=['SN'])\n",
+    "\n",
+    "#gather values for new data frame\n",
     "gen_count = df_gen_clean['Gender'].value_counts()\n",
     "gen_count_df = pd.DataFrame(data=gen_count)\n",
     "gen_count_df['Percentage of Players'] = (gen_count_df['Gender'] / gen_count_df['Gender'].sum())\n",
     "gen_count_df.rename(columns={\"Gender\" : \"Total Counts\"}, inplace=True)\n",
     "\n",
+    "#format values\n",
     "gen_count_df['Percentage of Players'] = gen_count_df['Percentage of Players'].map(\"{:,.2%}\".format)\n",
     "\n",
-    "gen_count_df\n"
+    "#display data frame\n",
+    "gen_count_df"
    ]
   },
   {
@@ -418,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -497,13 +506,16 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#create a group on Gender\n",
     "grp_gen_df = df.groupby(['Gender'])\n",
+    "\n",
+    "#gather values for new data frame\n",
     "pur_count = grp_gen_df['Item Name'].count()\n",
     "pur_ana_df = pd.DataFrame(data=pur_count)\n",
     "pur_ana_df.rename(columns={\"Item Name\" : \"Purchase Count\"}, inplace=True)\n",
@@ -511,11 +523,13 @@
     "pur_ana_df['Total Purchase Value'] = grp_gen_df['Price'].sum()\n",
     "pur_ana_df['Avg Total Purchase per Person'] = (grp_gen_df['Price'].sum()/grp_gen_df['SN'].nunique())\n",
     "\n",
+    "#format values\n",
     "pur_ana_df['Average Purchase Price'] = pur_ana_df['Average Purchase Price'].map(\"${:,.2f}\".format)\n",
     "pur_ana_df['Total Purchase Value'] = pur_ana_df['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "pur_ana_df['Avg Total Purchase per Person'] = pur_ana_df['Avg Total Purchase per Person'].map(\"${:,.2f}\".format)\n",
     "\n",
-    "pur_ana_df\n"
+    "#display data frame\n",
+    "pur_ana_df"
    ]
   },
   {
@@ -549,14 +563,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-29-cddaf27ed464>:4: SettingWithCopyWarning: \n",
+      "<ipython-input-6-089d17dd05f2>:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -646,25 +660,32 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#create bins and labels\n",
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
     "age_labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "\n",
+    "#apply bin to new column on nonduplicate data frame\n",
     "df_gen_clean['Age Group'] = pd.cut(df_gen_clean[\"Age\"], bins, labels=age_labels, include_lowest=True)\n",
+    "\n",
+    "#create a group on Age Group\n",
     "age_count = df_gen_clean['Age Group'].value_counts()\n",
+    "\n",
+    "#gather values for new data frame\n",
     "age_count_per = (df_gen_clean['Age Group'].value_counts()/df_gen_clean['Age Group'].count())\n",
     "df_age_dem = pd.DataFrame({\"Total Count\": age_count, \"Percentage of Players\": age_count_per})\n",
     "df_age_dem = df_age_dem.sort_index()\n",
     "\n",
+    "#format values\n",
     "df_age_dem['Percentage of Players'] = df_age_dem['Percentage of Players'].map(\"{:,.2%}\".format)\n",
     "\n",
-    "df_age_dem\n",
-    "\n"
+    "#display data frame\n",
+    "df_age_dem"
    ]
   },
   {
@@ -695,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -817,14 +838,19 @@
        "40+                               $3.04  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#apply bin to new column on original data frame\n",
     "df['Age Group'] = pd.cut(df_gen_clean[\"Age\"], bins, labels=age_labels, include_lowest=True)\n",
+    "\n",
+    "#create a group on Age Group\n",
     "age_gen_df = df.groupby(['Age Group'])\n",
+    "\n",
+    "#gather values for new data frame\n",
     "age_pur_count = age_gen_df['Item Name'].count()\n",
     "age_pur_ana_df = pd.DataFrame(data=age_pur_count)\n",
     "age_pur_ana_df.rename(columns={\"Item Name\" : \"Purchase Count\"}, inplace=True)\n",
@@ -832,10 +858,12 @@
     "age_pur_ana_df['Total Purchase Value'] = age_gen_df['Price'].sum()\n",
     "age_pur_ana_df['Avg Total Purchase per Person'] = (age_gen_df['Price'].sum()/age_gen_df['SN'].nunique())\n",
     "\n",
+    "#format values\n",
     "age_pur_ana_df['Average Purchase Price'] = age_pur_ana_df['Average Purchase Price'].map(\"${:,.2f}\".format)\n",
     "age_pur_ana_df['Total Purchase Value'] = age_pur_ana_df['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "age_pur_ana_df['Avg Total Purchase per Person'] = age_pur_ana_df['Avg Total Purchase per Person'].map(\"${:,.2f}\".format)\n",
     "\n",
+    "#display data frame\n",
     "age_pur_ana_df"
    ]
   },
@@ -868,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -948,23 +976,30 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#create a group on SN\n",
     "sn_df = df.groupby(['SN'])\n",
+    "\n",
+    "#gather values for new data frame\n",
     "sn_pur_count = sn_df['Item Name'].count()\n",
     "sn_pur_ana_df = pd.DataFrame(sn_pur_count)\n",
     "sn_pur_ana_df.rename(columns={\"Item Name\" : \"Purchase Count\"}, inplace=True)\n",
     "sn_pur_ana_df['Average Purchase Price'] = sn_df['Price'].mean()\n",
     "sn_pur_ana_df['Total Purchase Value'] = sn_df['Price'].sum()\n",
+    "\n",
+    "#sort by total purchase price\n",
     "sn_pur_ana_df = sn_pur_ana_df.sort_values('Total Purchase Value', ascending=False)\n",
     "\n",
+    "#format values\n",
     "sn_pur_ana_df['Average Purchase Price'] = sn_pur_ana_df['Average Purchase Price'].map(\"${:,.2f}\".format)\n",
     "sn_pur_ana_df['Total Purchase Value'] = sn_pur_ana_df['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "\n",
+    "#display data frame\n",
     "sn_pur_ana_df.head()\n"
    ]
   },
@@ -1000,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1103,24 +1138,33 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#generate a new data frame for columns item id, item name and price\n",
     "item_df = pd.DataFrame(df, columns=['Item ID', 'Item Name','Price'])\n",
+    "\n",
+    "#group by item id and item name\n",
     "item_df_gr = item_df.groupby(['Item ID', 'Item Name'])\n",
+    "\n",
+    "#gather values for new data frame\n",
     "item_count = item_df_gr['Item Name'].count()\n",
     "item_sum_df = pd.DataFrame(item_count)\n",
     "item_sum_df.rename(columns={\"Item Name\" : \"Total Purchase Count\"}, inplace=True)\n",
     "item_sum_df['Item Price'] = (item_df_gr['Price'].sum()/item_df_gr['Item Name'].count())\n",
     "item_sum_df['Total Purchase Value'] = item_df_gr['Price'].sum()\n",
+    "\n",
+    "#sort by total purchase price and rename data frame so orginal can be used for next exercise\n",
     "item_sum_df_pur = item_sum_df.sort_values('Total Purchase Count', ascending=False)\n",
     "\n",
+    "#format values\n",
     "item_sum_df_pur['Item Price'] = item_sum_df_pur['Item Price'].map(\"${:,.2f}\".format)\n",
     "item_sum_df_pur['Total Purchase Value'] = item_sum_df_pur['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "\n",
+    "#display data frame\n",
     "item_sum_df_pur.head()\n"
    ]
   },
@@ -1147,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1315,17 +1359,20 @@
        "[179 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#sort original item data frame\n",
     "item_sum_df_tot = item_sum_df.sort_values('Total Purchase Value', ascending=False)\n",
     "\n",
+    "#format values\n",
     "item_sum_df_tot['Item Price'] = item_sum_df_tot['Item Price'].map(\"${:,.2f}\".format)\n",
     "item_sum_df_tot['Total Purchase Value'] = item_sum_df_tot['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "\n",
+    "#display data frame\n",
     "item_sum_df_tot"
    ]
   }
